{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 96,
  "lineage": "29e890d4-56b2-3b72-6f78-6e6809287e3f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008744601422:security-group/sg-0333fb8649c50f1ca",
            "description": "ALB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0333fb8649c50f1ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "008744601422",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "environment": "dev",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c5e90f83d6318ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:008744601422:loadbalancer/app/service-b-alb/79d71601ee590e87",
            "arn_suffix": "app/service-b-alb/79d71601ee590e87",
            "desync_mitigation_mode": "defensive",
            "dns_name": "service-b-alb-1496036961.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:008744601422:loadbalancer/app/service-b-alb/79d71601ee590e87",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "service-b-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0333fb8649c50f1ca"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04b9291a717f203f8"
              },
              {
                "subnet_id": "subnet-0d9c3abd659a5bb1c"
              }
            ],
            "subnets": [
              "subnet-04b9291a717f203f8",
              "subnet-0d9c3abd659a5bb1c"
            ],
            "tags": {
              "Name": "service-b-alb",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "service-b-alb",
              "environment": "dev",
              "terraform": "true"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-06c5e90f83d6318ce",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:008744601422:listener/app/service-b-alb/79d71601ee590e87/a9ccf28c7c0c2050",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:008744601422:targetgroup/tf-20230414062009268400000001/fe7ea5da6253445d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:008744601422:listener/app/service-b-alb/79d71601ee590e87/a9ccf28c7c0c2050",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:008744601422:loadbalancer/app/service-b-alb/79d71601ee590e87",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "environment": "dev",
              "terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.order_service_lambda.aws_cloudwatch_log_group.lambda",
            "module.order_service_lambda.aws_iam_policy.additional_inline",
            "module.order_service_lambda.aws_iam_policy.additional_json",
            "module.order_service_lambda.aws_iam_policy.additional_jsons",
            "module.order_service_lambda.aws_iam_policy.async",
            "module.order_service_lambda.aws_iam_policy.dead_letter",
            "module.order_service_lambda.aws_iam_policy.logs",
            "module.order_service_lambda.aws_iam_policy.tracing",
            "module.order_service_lambda.aws_iam_policy.vpc",
            "module.order_service_lambda.aws_iam_role.lambda",
            "module.order_service_lambda.aws_iam_role_policy_attachment.additional_inline",
            "module.order_service_lambda.aws_iam_role_policy_attachment.additional_json",
            "module.order_service_lambda.aws_iam_role_policy_attachment.additional_jsons",
            "module.order_service_lambda.aws_iam_role_policy_attachment.additional_many",
            "module.order_service_lambda.aws_iam_role_policy_attachment.additional_one",
            "module.order_service_lambda.aws_iam_role_policy_attachment.async",
            "module.order_service_lambda.aws_iam_role_policy_attachment.dead_letter",
            "module.order_service_lambda.aws_iam_role_policy_attachment.logs",
            "module.order_service_lambda.aws_iam_role_policy_attachment.tracing",
            "module.order_service_lambda.aws_iam_role_policy_attachment.vpc",
            "module.order_service_lambda.aws_lambda_function.this",
            "module.order_service_lambda.aws_s3_object.lambda_package",
            "module.order_service_lambda.data.aws_arn.log_group_arn",
            "module.order_service_lambda.data.aws_cloudwatch_log_group.lambda",
            "module.order_service_lambda.data.aws_iam_policy.tracing",
            "module.order_service_lambda.data.aws_iam_policy.vpc",
            "module.order_service_lambda.data.aws_iam_policy_document.additional_inline",
            "module.order_service_lambda.data.aws_iam_policy_document.assume_role",
            "module.order_service_lambda.data.aws_iam_policy_document.async",
            "module.order_service_lambda.data.aws_iam_policy_document.dead_letter",
            "module.order_service_lambda.data.aws_iam_policy_document.logs",
            "module.order_service_lambda.data.aws_partition.current",
            "module.order_service_lambda.data.external.archive_prepare",
            "module.order_service_lambda.local_file.archive_plan",
            "module.order_service_lambda.null_resource.archive",
            "module.order_service_lambda_alias.aws_lambda_alias.no_refresh",
            "module.order_service_lambda_alias.aws_lambda_alias.with_refresh",
            "module.order_service_lambda_alias.data.aws_lambda_alias.existing",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:008744601422:targetgroup/tf-20230414062009268400000001/fe7ea5da6253445d",
            "arn_suffix": "targetgroup/tf-20230414062009268400000001/fe7ea5da6253445d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": false,
                "healthy_threshold": 5,
                "interval": 35,
                "matcher": "200",
                "path": "/",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:008744601422:targetgroup/tf-20230414062009268400000001/fe7ea5da6253445d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "name": "tf-20230414062009268400000001",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
              }
            ],
            "tags": {
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "environment": "dev",
              "terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "lambda",
            "vpc_id": "vpc-06c5e90f83d6318ce"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.alb.aws_lb.this",
            "module.order_service_lambda.aws_cloudwatch_log_group.lambda",
            "module.order_service_lambda.aws_iam_policy.additional_inline",
            "module.order_service_lambda.aws_iam_policy.additional_json",
            "module.order_service_lambda.aws_iam_policy.additional_jsons",
            "module.order_service_lambda.aws_iam_policy.async",
            "module.order_service_lambda.aws_iam_policy.dead_letter",
            "module.order_service_lambda.aws_iam_policy.logs",
            "module.order_service_lambda.aws_iam_policy.tracing",
            "module.order_service_lambda.aws_iam_policy.vpc",
            "module.order_service_lambda.aws_iam_role.lambda",
            "module.order_service_lambda.aws_iam_role_policy_attachment.additional_inline",
            "module.order_service_lambda.aws_iam_role_policy_attachment.additional_json",
            "module.order_service_lambda.aws_iam_role_policy_attachment.additional_jsons",
            "module.order_service_lambda.aws_iam_role_policy_attachment.additional_many",
            "module.order_service_lambda.aws_iam_role_policy_attachment.additional_one",
            "module.order_service_lambda.aws_iam_role_policy_attachment.async",
            "module.order_service_lambda.aws_iam_role_policy_attachment.dead_letter",
            "module.order_service_lambda.aws_iam_role_policy_attachment.logs",
            "module.order_service_lambda.aws_iam_role_policy_attachment.tracing",
            "module.order_service_lambda.aws_iam_role_policy_attachment.vpc",
            "module.order_service_lambda.aws_lambda_function.this",
            "module.order_service_lambda.aws_s3_object.lambda_package",
            "module.order_service_lambda.data.aws_arn.log_group_arn",
            "module.order_service_lambda.data.aws_cloudwatch_log_group.lambda",
            "module.order_service_lambda.data.aws_iam_policy.tracing",
            "module.order_service_lambda.data.aws_iam_policy.vpc",
            "module.order_service_lambda.data.aws_iam_policy_document.additional_inline",
            "module.order_service_lambda.data.aws_iam_policy_document.assume_role",
            "module.order_service_lambda.data.aws_iam_policy_document.async",
            "module.order_service_lambda.data.aws_iam_policy_document.dead_letter",
            "module.order_service_lambda.data.aws_iam_policy_document.logs",
            "module.order_service_lambda.data.aws_partition.current",
            "module.order_service_lambda.data.external.archive_prepare",
            "module.order_service_lambda.local_file.archive_plan",
            "module.order_service_lambda.null_resource.archive",
            "module.order_service_lambda_alias.aws_lambda_alias.no_refresh",
            "module.order_service_lambda_alias.aws_lambda_alias.with_refresh",
            "module.order_service_lambda_alias.data.aws_lambda_alias.existing",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.order_service",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:008744601422:targetgroup/tf-20230414062009268400000001/fe7ea5da6253445d-20230414062011060400000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:008744601422:targetgroup/tf-20230414062009268400000001/fe7ea5da6253445d",
            "target_id": "arn:aws:lambda:ap-south-1:008744601422:function:order-service-lambda:order-Service_lambda_alias"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.order_service_lambda.aws_cloudwatch_log_group.lambda",
            "module.order_service_lambda.aws_iam_policy.additional_inline",
            "module.order_service_lambda.aws_iam_policy.additional_json",
            "module.order_service_lambda.aws_iam_policy.additional_jsons",
            "module.order_service_lambda.aws_iam_policy.async",
            "module.order_service_lambda.aws_iam_policy.dead_letter",
            "module.order_service_lambda.aws_iam_policy.logs",
            "module.order_service_lambda.aws_iam_policy.tracing",
            "module.order_service_lambda.aws_iam_policy.vpc",
            "module.order_service_lambda.aws_iam_role.lambda",
            "module.order_service_lambda.aws_iam_role_policy_attachment.additional_inline",
            "module.order_service_lambda.aws_iam_role_policy_attachment.additional_json",
            "module.order_service_lambda.aws_iam_role_policy_attachment.additional_jsons",
            "module.order_service_lambda.aws_iam_role_policy_attachment.additional_many",
            "module.order_service_lambda.aws_iam_role_policy_attachment.additional_one",
            "module.order_service_lambda.aws_iam_role_policy_attachment.async",
            "module.order_service_lambda.aws_iam_role_policy_attachment.dead_letter",
            "module.order_service_lambda.aws_iam_role_policy_attachment.logs",
            "module.order_service_lambda.aws_iam_role_policy_attachment.tracing",
            "module.order_service_lambda.aws_iam_role_policy_attachment.vpc",
            "module.order_service_lambda.aws_lambda_function.this",
            "module.order_service_lambda.aws_s3_object.lambda_package",
            "module.order_service_lambda.data.aws_arn.log_group_arn",
            "module.order_service_lambda.data.aws_cloudwatch_log_group.lambda",
            "module.order_service_lambda.data.aws_iam_policy.tracing",
            "module.order_service_lambda.data.aws_iam_policy.vpc",
            "module.order_service_lambda.data.aws_iam_policy_document.additional_inline",
            "module.order_service_lambda.data.aws_iam_policy_document.assume_role",
            "module.order_service_lambda.data.aws_iam_policy_document.async",
            "module.order_service_lambda.data.aws_iam_policy_document.dead_letter",
            "module.order_service_lambda.data.aws_iam_policy_document.logs",
            "module.order_service_lambda.data.aws_partition.current",
            "module.order_service_lambda.data.external.archive_prepare",
            "module.order_service_lambda.local_file.archive_plan",
            "module.order_service_lambda.null_resource.archive",
            "module.order_service_lambda_alias.aws_lambda_alias.no_refresh",
            "module.order_service_lambda_alias.aws_lambda_alias.with_refresh",
            "module.order_service_lambda_alias.data.aws_lambda_alias.existing",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008744601422:internet-gateway/igw-0a99525443fcafd9b",
            "id": "igw-0a99525443fcafd9b",
            "owner_id": "008744601422",
            "tags": {
              "Environment": "dev",
              "Name": "service-b-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "service-b-vpc"
            },
            "vpc_id": "vpc-06c5e90f83d6318ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a99525443fcafd9b",
            "id": "r-rtb-08524a7759e4173231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08524a7759e417323",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008744601422:route-table/rtb-0ba13b3fa2125d64d",
            "id": "rtb-0ba13b3fa2125d64d",
            "owner_id": "008744601422",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "service-b-vpc-private-ap-south-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "service-b-vpc-private-ap-south-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c5e90f83d6318ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008744601422:route-table/rtb-0e092ecd2d1b03ac5",
            "id": "rtb-0e092ecd2d1b03ac5",
            "owner_id": "008744601422",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "service-b-vpc-private-ap-south-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "service-b-vpc-private-ap-south-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c5e90f83d6318ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008744601422:route-table/rtb-08524a7759e417323",
            "id": "rtb-08524a7759e417323",
            "owner_id": "008744601422",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a99525443fcafd9b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "service-b-vpc-public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "service-b-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c5e90f83d6318ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d552d8ca9cfc5f3c",
            "route_table_id": "rtb-0ba13b3fa2125d64d",
            "subnet_id": "subnet-0568e35a46eaeb75c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06557c4e134293eba",
            "route_table_id": "rtb-0e092ecd2d1b03ac5",
            "subnet_id": "subnet-01583f822e6b9dfe3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ebb134a3a4b563f",
            "route_table_id": "rtb-08524a7759e417323",
            "subnet_id": "subnet-0d9c3abd659a5bb1c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef8cfefe85f9f665",
            "route_table_id": "rtb-08524a7759e417323",
            "subnet_id": "subnet-04b9291a717f203f8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008744601422:subnet/subnet-0568e35a46eaeb75c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0568e35a46eaeb75c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008744601422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "service-b-vpc-private-ap-south-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "service-b-vpc-private-ap-south-1a"
            },
            "vpc_id": "vpc-06c5e90f83d6318ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008744601422:subnet/subnet-01583f822e6b9dfe3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01583f822e6b9dfe3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008744601422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "service-b-vpc-private-ap-south-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "service-b-vpc-private-ap-south-1b"
            },
            "vpc_id": "vpc-06c5e90f83d6318ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008744601422:subnet/subnet-0d9c3abd659a5bb1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9c3abd659a5bb1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "008744601422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "service-b-vpc-public-ap-south-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "service-b-vpc-public-ap-south-1a"
            },
            "vpc_id": "vpc-06c5e90f83d6318ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008744601422:subnet/subnet-04b9291a717f203f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b9291a717f203f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "008744601422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "service-b-vpc-public-ap-south-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "service-b-vpc-public-ap-south-1b"
            },
            "vpc_id": "vpc-06c5e90f83d6318ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008744601422:vpc/vpc-06c5e90f83d6318ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0802109a453897c82",
            "default_route_table_id": "rtb-02b93cd9dd0aad5bc",
            "default_security_group_id": "sg-0915725832d11384e",
            "dhcp_options_id": "dopt-0c551128ae4f108dd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06c5e90f83d6318ce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02b93cd9dd0aad5bc",
            "owner_id": "008744601422",
            "tags": {
              "Environment": "dev",
              "Name": "service-b-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "service-b-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}